# Medieval-Adventure-Game

./: .gitignore  README.md  combat_calculator.py  map_preload.py  map_preload_pkl.py  monster_stats.py  time_manager.py  travel_calculator.py  travel_pathfinder.py  travel_pathfinder_v1.py  travel_pathfinder_v2.py  travel_pathfinder_vx.py  travel_visualiser.py
backend/: pyproject.toml  run.py
backend/resources/: roadmap.txt
backend/resources/api/: announcements.txt  jsonRequestExamples.txt
backend/resources/inputs/: armour.csv  characters.csv  class concepts.txt  class ideas.txt  classes.csv  raw_attacks.csv
backend/resources/inputs/maps/: map_generation.py
backend/resources/inputs/maps/map1/: entities.csv
backend/resources/inputs/weapons/: axes.csv  bows.csv  clubs.csv  crossbows.csv  double_edged_swords.csv  edgeless_swords.csv  glaives.csv  heavy_throwables.csv  polearms.csv  single_edged_swords.csv  staves.csv  weapon traits.txt
backend/src/: winrate_testing.py
backend/src/dnd/: arena.py  backend_testing.py  dice_roll_testing.py  dnd.py  settings.py
backend/src/dnd/ai/: __init__.py  ai_manager.py  brain.py
backend/src/dnd/api/: api_session.py  api_turn_notification_subscription.py  users.py
backend/src/dnd/backend/: __init__.py  back_requests.py
backend/src/dnd/backend/processing/: __init__.py  back.py  hub.py  id_generator.py  turn_manager.py  turn_notifications.py
backend/src/dnd/backend/utils/: dice_utils.py
backend/src/test/: test_back.py  test_hub.py  test_weapon_images.py
backend/test/src/backend/: test_back.py  test_hub.py
(+262 files in other folders)
